--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- my css -->
+    <!-- carousel css -->
+    <link rel="stylesheet" href="./styles/carousel.css">
+    <!-- game css -->
     <link rel="stylesheet" href="./styles/main.css">
     <!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
-    <!-- my js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
+    <!-- character select carousel js -->
+    <script src="./scripts/carousel.js" defer></script>
+    <!-- game logic js -->
     <script src="./scripts/app.js" defer></script>
 
     <title>Tomagotchi</title>
@@ -38,10 +42,18 @@
     </header>
 
     <main id="display">
-        <form id="game-info">
-            <input type="text" id="name-input" placeholder="Name Your Pet">
-            <button id="start-btn">Play!</button>
-        </form>
+        <section id="game-info">
+            <div id="carousel-container">
+                <button id="back" class="carousel-button">Previous</button>
+                <div id="carousel"></div>
+                <button id="forward" class="carousel-button">Next</button>
+            </div>
+
+            <form>
+                <input type="text" id="name-input" placeholder="Name Your Pet">
+                <button id="start-btn">Play!</button>
+            </form>
+        </section>
 
         <div id="pet"></div>
     </main>
