pulls keyframes into their own css file for organization

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- keyframes css -->
+    <link rel="stylesheet" href="./styles/keyframes.css">
     <!-- carousel css -->
     <link rel="stylesheet" href="./styles/carousel.css">
     <!-- game css -->
@@ -17,7 +19,7 @@
     <title>Tomagotchi</title>
 </head>
 <body>
-    <header id="stats" class="hidden">
+    <header class="stats hidden">
         <div id="name"></div>
 
         <div class="stat">
@@ -42,7 +44,7 @@
     </header>
 
     <main id="display">
-        <section id="game-info">
+        <section class="game-info">
             <div id="carousel-container">
                 <button id="back" class="carousel-button">Previous</button>
                 <div id="carousel"></div>
