adds sprite class and begins refactoring animation

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
             <div id="carousel-container">
                 <i id="back" class="carousel-button fas fa-angle-left"></i>
 
-                <div id="carousel"></div>
-                
+                <div id="carousel">
+
+                </div>
+
                 <i id="forward" class="carousel-button fas fa-angle-right"></i>
             </div>
 
